# swc-plugin-node-globals-inject

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  deny.toml  package.json
.changeset/: young-zebras-approve.md
.github/workflows/: publish.yaml  release.yaml  test.yaml
node-test/: .gitignore  .swcrc  README.md  index.ts  package.json  tsconfig.json
src/: config.rs  constants.rs  import_data_parser.rs  lib.rs  post_scan_write_visitor.rs  scan_visitor.rs  specifier_factory.rs
tests/: lib_test.rs
