[package]
name = "node_globals_inject"
version = "0.1.0"
edition = "2021"
license    = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
serde_json = "1.0.137"
swc_core = { version = "8.0.*", features = ["ecma_plugin_transform"] }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
